# expense_assistant

./: .env  .gitignore  CLI_GUIDE.md  GOOGLE_SHEETS_SETUP.md  README.md  app_config.json  chatbot.py  config.py  database.py  debug_sheets.py  expense_aliases.sh  expense_tracker.db  expense_tracker.py  google_sheets_sync.py  llm_processor.py  llm_processor_backup.py  main.py  pyproject.toml  requirements.txt  run_app.sh  setup_sheets.py
