[project]
name = "thangq-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "matplotlib>=3.10.3",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
